# proxtorch

./: .readthedocs.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: changes.yml  draft-pdf.yml
benchmarks/: benchmark_tvl1_2d.py  cameraman.py  nilearn_tvl1.py  tvl1.py
docs/source/: api_reference.rst  conf.py  contributing.rst  index.rst  installation.rst  introduction.rst  requirements.txt  usage.rst
docs/source/_static/: custom.css
docs/source/developer_info/: contribute.rst  license.rst
docs/source/examples/: README.rst  plot_fista.py  plot_image_restoration.py  plot_lasso_regression.py  plot_netflix.py  plot_robust_pca.py
joss/: paper.bib  paper.md
proxtorch/: base.py
proxtorch/constraints/: __init__.py  box.py  frobenius.py  l0ball.py  l1ball.py  l2ball.py  lInfinityBall.py  non_negative.py  rank.py  tracenorm.py
proxtorch/operators/: __init__.py  dummy.py  elastic_net.py  frobenius.py  fused_lasso.py  graphnet.py  group_lasso.py  huber.py  l0.py  l0ball.py  l1.py  l1ball.py  l2.py  matrix_l1.py  non_negative.py  tracenorm.py  tv_2d.py  tv_3d.py  tvl1_2d.py  tvl1_3d.py
test/: test_box.py  test_dummy.py  test_elasticnet.py  test_frobenius.py  test_fusedlasso.py  test_graphnet.py  test_grouplasso.py  test_huber.py  test_l0.py  test_l0ball.py  test_l1.py  test_l1ball.py  test_l2.py  test_linf.py  test_nonnegative.py  test_rank.py  test_tracenorm.py  test_tv_2d.py  test_tv_3d.py  test_tvl1_2d.py  test_tvl1_3d.py
