[tool.poetry]
name = "ProxTorch"
version = "0.0.0"
description = "ProxTorch is a PyTorch library for proximal operators."
authors = ["jameschapman <james.chapman.19@ucl.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jameschapman19/proxtorch"
keywords = ["proximal", "optimisation", "pytorch", "proximal operators"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
torch = [
     {version = "^2.0.1", platform = "darwin"},
     {version = "^2.0.1", platform = "linux", source = "torch"},
     {version = "^2.0.1", platform = "win32", source = "torch"}, ]

[[tool.poetry.source]]
 name = "torch"
 url = "https://download.pytorch.org/whl/cpu"
 priority = "explicit"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
codecov = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"